--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>Seedsman Intelligent Irrigation System</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,19 +43,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
+                <img width="60px" style=" display: inline;" class="img-responsive" src="img/seedsmanlogo.png" alt="">
+                <p style="font-size: 20px; display: inline;">Seedsman Intelligent Irrigation</p>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
+                    <li style="margin-top: 10px; font-size: 20px">
+                        <a href="">The world's smartest irrigation system.</a>
                     </li>
                 </ul>
             </div>
@@ -73,9 +68,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Landing Page</h1>
-                        <h3>A Template by Start Bootstrap</h3>
+                        <h1 style="font-size: 50px;">The world's most powerful smart irrigation system</h1>
+                        <h3 style="font-size: 20px;">Discover endless customization with the only irrigation system that listens to the weather, your soil, and you</h3>
                         <hr class="intro-divider">
+                        <p>Get on the pre-qualification list to get access to the first round of Seedsman Irrigation Systems.</p>
                         <form method="post" action="/">
                             <div class="form-inline">
                                 <div class="form-group">
@@ -119,11 +115,16 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Checks your local weather station for rain.</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">Powerful intelligence</h2>
+                    <p class="lead">
+                    <ul>
+                        <li>Intelligently checks local weather for rain.</li>
+                        <li>Easily set your own precipitation limit and how long to wait for rain.</li>
+                        <li>Choose what days and times to allow watering because you need control.</li>
+                    </ul>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/weather.png" alt="">
+                    <img class="img-responsive" width="350px;" src="img/weather.png" alt="">
                 </div>
             </div>
 
@@ -141,11 +142,16 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Mositure dector makes sure that your lawn<br>is hydrated</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">Never worry about a dying lawn</h2>
+                    <ul>
+                        <li>Seedsman uses Scientfically proven mositure detecters in your lawn to detect when it needs water.</li>
+                        <li>Customize your own minimum moisture level for watering.</li>
+                        <li>Communicates via bluetooth with the Seedsman.</li>
+                    </ul>
+
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img width="350px;" class="img-responsive" src="img/seedsmanbox.png" alt="">
                 </div>
             </div>
 
@@ -163,12 +169,15 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Plants need more than water, we detect nitrogen etc<br>in the soil and let you know via our app.</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-http://www.amazon.com/Rachio-Smart-Enabled-Irrigation-Controller/product-reviews/B00IEFXDIE/ref=cm_cr_dp_qt_hist_one?ie=UTF8&filterBy=addOneStar&showViewpoints=0
+                    <h2 class="section-heading">More control with our mobile app</h2>
+                    <ul>
+                        <li>Simply turn your sprinklers off and on with touch of a button.</li>
+                        <li>Discover value in your entire irrigation history.</li>
+                        <li>Comprehensive usage reports and maximum control.</p>
+                    </ul>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img width="350px;" class="img-responsive" src="img/phones.png" alt="">
                 </div>
             </div>
 
@@ -187,11 +196,15 @@ http://www.amazon.com/Rachio-Smart-Enabled-Irrigation-Controller/product-reviews
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Easy to install <br>is hydrated</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">Easy to install</h2>
+                    <ul>
+                        <li>Just remove your old box and snap in your Seedsman.</li>
+                        <li>Connects to the internet via wifi or ethernet.</li>
+                        <li>Guarenteed to water your lawn with an inbuilt timer, even without connection.</li>
+                    </ul>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img width="350px;" class="img-responsive" src="img/easy.png" alt="">
                 </div>
             </div>
 
@@ -202,6 +215,34 @@ http://www.amazon.com/Rachio-Smart-Enabled-Irrigation-Controller/product-reviews
     <!-- /.content-section-b -->
 
 
+    <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Save things that are important to you</h2>
+                    <ul>
+                        <li>A Seedsman is a proven way to save water.</li>
+                        <li>Using less water is a proven way to save money.</li>
+                        <li>Proven or not by because you are efficient you are saving the world.</li>
+                    </ul>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img width="350px;" class="img-responsive" src="img/piggy.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+
+
 
 	<a  name="contact"></a>
     <div class="banner">
@@ -209,10 +250,20 @@ http://www.amazon.com/Rachio-Smart-Enabled-Irrigation-Controller/product-reviews
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
-                    <h2>Save the world by saving water, be more effiecient</h2>
+                <div class="col-lg-12">
+                    <center>
+                    <h2 style="font-size: 20px;">Never has irrigation been so powerful and customizable, because we didn't have the technology.
+                        <br>Now it is here.  Get on the pre-qualification list and have first dibs on a new Seedsman.</h2>
+                </center>
                 </div>
-                <div class="col-lg-6">
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <center>
+
+                        <hr class="intro-divider">
+                        <p>Get on the pre-qualification list to get access to the first round of Seedsman Irrigation Systems.</p>
+                    <br>
                     <form method="post" action="/">
                         <div class="form-inline">
                             <div class="form-group">
@@ -222,6 +273,7 @@ http://www.amazon.com/Rachio-Smart-Enabled-Irrigation-Controller/product-reviews
                             <button type="submit" class="btn btn-default">Sign up</button>
                         </div>
                     </form>
+                </center>
                 </div>
             </div>
 
@@ -236,24 +288,7 @@ http://www.amazon.com/Rachio-Smart-Enabled-Irrigation-Controller/product-reviews
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Seedsman Intelligent Irrigation 2015. All Rights Reserved</p>
                     <a href="http://www.freepik.com/free-photos-vectors/icon">Icon vector designed by Freepik</a>
                 </div>
             </div>
